JDO-647 - Tests now run in the order listed in pom.xml. No tests hang, full TCK runs with some errors.